RESOLVED FIXED271430
[IFC][Partial layout] Unbalanced InlineBoxStart/End may cause unexpected state in InlineItemsBuilder
https://bugs.webkit.org/show_bug.cgi?id=271430
Summary [IFC][Partial layout] Unbalanced InlineBoxStart/End may cause unexpected stat...
alan
Reported 2024-03-21 17:12:32 PDT
Attachments
[fast-cq]Patch (4.86 KB, patch)
2024-03-21 17:16 PDT, alan
no flags
alan
Comment 1 2024-03-21 17:16:53 PDT
Created attachment 470472 [details] [fast-cq]Patch
EWS
Comment 2 2024-03-22 05:44:29 PDT
Committed 276535@main (9ca509f5dfcc): <https://commits.webkit.org/276535@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470472 [details].
Note You need to log in before you can comment on or make changes to this bug.