[IFC][Partial layout] Unbalanced InlineBoxStart/End may cause unexpected state in InlineItemsBuilder https://bugs.webkit.org/show_bug.cgi?id=271430 <rdar://125183454>

Reviewed by Antti Koivisto.

This change ensures graceful recovery when partial layout produces unbalanced InlineBoxStart/End pairs with more InlineBoxEnd items than InlineBoxStart ones.

* LayoutTests/TestExpectations:
* LayoutTests/fast/text/bidi-text-and-partial-layout-crash-expected.txt: Added.
* LayoutTests/fast/text/bidi-text-and-partial-layout-crash.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::handleEnterExitBidiContext):
(WebCore::Layout::rewindBidiContextStack):

Canonical link: https://commits.webkit.org/276535@main